# VR-Modality-Bias

./: .gitignore  Makefile  README.md  custom.toml  pyproject.toml  qwen_sparc.py  requirements.txt  run_sensib_alpha.sh  versions.txt
configs/: baseline.yaml  download_data.yaml  run_internvl2_long.yaml  run_internvl2_medium.yaml  run_internvl2_short.yaml  run_internvl3_long.yaml  run_internvl3_medium.yaml  run_internvl3_short.yaml  run_llava_long.yaml  run_llava_medium.yaml  run_llava_short.yaml  run_qwen7b_long.yaml  run_qwen7b_medium.yaml  run_qwen7b_short.yaml  run_smolvlm22_long.yaml  run_smolvlm22_medium.yaml
data/processed/mscoco_baseline/: manifest.jsonl
docker/: Dockerfile  docker-compose.yml
results/: README.md
results/avaliacao/llava-1.5-7b/long/run_all_v1/: metrics.parquet
results/avaliacao/llava-1.5-7b/medium/run_all_v1/: metrics.parquet
results/avaliacao/llava-1.5-7b/short/run_all_v1/: metrics.parquet
results/diagnostico/llava-1.5-7b/long/run_all_v1/: captions.jsonl  metrics.parquet
results/diagnostico/llava-1.5-7b/medium/run_all_v1/: captions.jsonl  metrics.parquet
results/diagnostico/llava-1.5-7b/short/run_all_v1/: captions.jsonl  metrics.parquet  run_all_summary.json
results/runs/: baseline_smolvlm256_mscoco_short_LATEST.txt  sweep_qwen7b_mscoco_long_LATEST.txt  sweep_qwen7b_mscoco_medium_LATEST.txt  sweep_qwen7b_mscoco_short_LATEST.txt  sweep_smolvlm22_mscoco_long_LATEST.txt  sweep_smolvlm22_mscoco_medium_LATEST.txt  sweep_smolvlm22_mscoco_short_LATEST.txt
results/runs/baseline_smolvlm256_mscoco_short_2026-05-29_112310/: config.yaml
results/runs/baseline_smolvlm256_mscoco_short_2026-05-29_113023/: metrics.parquet  ref_captions.jsonl
results/runs/baseline_smolvlm256_mscoco_short_2026-05-29_113423/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_qwen7b_mscoco_long_2026-06-02_224755/: config.yaml  metrics.parquet  ref_captions.jsonl
results/runs/sweep_qwen7b_mscoco_long_2026-06-02_225139/: config.yaml  diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_qwen7b_mscoco_long_2026-06-02_230145/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_qwen7b_mscoco_long_2026-06-02_232528/: diagnostics.json  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_qwen7b_mscoco_long_2026-06-02_232528/viz/000000001503/: token_kl.csv  token_kl.json
results/runs/sweep_qwen7b_mscoco_long_2026-06-02_232528/viz/000000002149/: token_kl.csv  token_kl.json
results/runs/sweep_qwen7b_mscoco_medium_2026-06-02_231857/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_qwen7b_mscoco_short_2026-06-02_222439/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_qwen7b_mscoco_short_2026-06-02_231455/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_smolvlm22_mscoco_long_2026-06-02_231003/: config.yaml  diagnostics.json  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_smolvlm22_mscoco_medium_2026-06-02_230759/: config.yaml  diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_smolvlm22_mscoco_short_2026-06-02_221124/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_smolvlm22_mscoco_short_2026-06-02_222151/: config.yaml
results/runs/sweep_smolvlm22_mscoco_short_2026-06-02_222357/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
results/runs/sweep_smolvlm22_mscoco_short_2026-06-02_230715/: diagnostics.json  metrics.parquet  ref_captions.jsonl  summary.csv  summary.json
scripts/: 01_prepare_data.py  02_build_manifest.py  03_generate_refs.py  04_collect_hidden_states.py  05_compute_metrics.py  06_summarize.py  07_make_plots.py  08_unit_example.py  09_run_caption_sweep.py  10_run_sweep.py  11_alucination_viz.py  12_run_sparc_eval.py  13_equivalence_check.py  14_repeatability_check.py  17_chair_report.py  18_phase3_generate.py  19_audit_image_token_layout.py  19_decode_sweep.py  20_decode_sweep.py  21_llava_smoke.py  22_block5_validate.py  23_run_all.py  24_run_all.py  25_internvl_inspect.py  26_internvl_exactness_gate.py  XX_inference_sparc.py  XX_sparc_smoke_compare.py  alucination_viz.py  audit_image_token_layout.py  build_manifest.py  build_pope.py  chair_report.py  collect_hidden_states.py  compute_metrics.py  decode_sweep_qwen.py  decode_sweep_smolvlm.py  equivalence_check.py  generate_refs.py  inference_sparc.py  internvl_exactness_gate.py  (+19 more)
src/vr_modality_bias/: __init__.py
src/vr_modality_bias/data/: __init__.py  captions.py  coco_annotations.py  manifests.py  perturbations.py  prompts.py
src/vr_modality_bias/experiment/: __init__.py  forced_decoding.py  memvr.py  plots.py  reference.py  sparc.py  teacher_forcing.py  vista.py
src/vr_modality_bias/io/: __init__.py  results.py  storage.py
src/vr_modality_bias/metrics/: __init__.py  chair.py  cosine.py  kl.py  pope.py  reference_layer.py  residual.py
src/vr_modality_bias/models/: __init__.py  base.py  internvl.py  llava.py  qwen_vl.py  registry.py  smolvlm.py
src/vr_modality_bias/utils/: __init__.py  attn.py  config.py  device.py  logging.py  memvr.py  profiling.py  runs.py  seeds.py  tokens.py  vista.py
tests/: conftest.py  test_alucination_viz.py  test_chair.py  test_chair_report_labels.py  test_cosine.py  test_decode_sweep_loop.py  test_forced_decoding.py  test_kl.py  test_memvr.py  test_memvr_diag.py  test_perturbations.py  test_phase3_cli.py  test_pipeline_integration.py  test_plots.py  test_pope.py  test_profiling.py  test_reference_layer.py  test_residual.py  test_results.py  test_runs.py  test_seeds.py  test_smoke.py  test_sparc.py  test_sparc_adaptive.py  test_sparc_conserve.py  test_sparc_qcond.py  test_storage.py  test_sweep.py  test_unit_example.py  test_vista.py
(+180 files in other folders)
