[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vr-modality-bias"
version = "0.1.0"
description = "Baseline (Stage 2) for the VR-Modality-Bias diagnostic pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VR-Modality-Bias contributors" }]
keywords = ["vlm", "modality-bias", "vr", "accessibility", "interpretability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    # Etapa 3 SPARC reads ``config.rope_parameters["mrope_section"]`` (the
    # text-config attribute that replaced ``rope_scaling`` only in
    # transformers 5.x — 4.57 still has the old name). We therefore pin to
    # the 5.x series; SmolVLMWrapper was migrated from AutoModelForVision2Seq
    # (removed in 5.0) to AutoModelForImageTextToText, which works for the
    # whole Idefics3 family.
    "transformers>=5.0,<6.0",
    "accelerate>=0.34,<2.0",
    "tokenizers>=0.20,<1.0",
    # transformers 5.x bumped hf-hub to >=1.3, so the lower bound moves up.
    "huggingface-hub>=1.3,<2.0",
    "timm>=0.9",                    # Idefics3 image processor uses ImageNetInfo
    "numpy>=1.26,<3.0",             # let resolver pick 1.x or 2.x per env
    "Pillow>=10.0",
    "h5py>=3.10",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "requests>=2.31",
    "matplotlib>=3.8",
    "loguru>=0.7",                  # collaborator-introduced logging facade
    "pyprojroot>=0.3",              # used by every module to bootstrap sys.path
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/akcit/VR-Modality-Bias"

[tool.hatch.build.targets.wheel]
packages = ["src/vr_modality_bias"]

[tool.hatch.build.targets.sdist]
include = [
    "src/vr_modality_bias",
    "configs",
    "scripts",
    "tests",
    "README.md",
    "EXPERIMENT.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"scripts/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:torch.*",
    "ignore::DeprecationWarning:transformers.*",
]
